--- a/css/style.css
+++ b/css/style.css
@@ -68,16 +68,53 @@ h4{
 }
 
 
+.button2 {
+  margin-top: 25px;
+  font-family: 'Kaisei Opti', serif;
+  text-align: center;
+  margin: 0 auto;
+  
+}
+
 button {
-      background-color:#95AB63;
-      color: #E1F0D5;
-      border-style:hidden;
-      border-radius: 10px;
-      margin: 0 auto;
-      margin-top: 50px;
-      height: 80px;
-      width: 200px;
-      border: none;
-      padding: .3rem 1rem;
-      
+  background-color: #95AB63;
+  margin-top: 50px;
+  height: 80px;
+  width: 200px;
+  border: none;
+  border-radius: 10px;
+  padding: .3rem 1rem;
+  text-decoration: none;
+  color: #F5FFE0;
+  margin-top: 25px;
+  font-family: 'Kaisei Opti', serif;
+}
+
+fieldset {
+  text-align: center;
+  margin-top: 250px;
+  font-family: 'Kaisei Opti', serif;
+  font-style: bold;
+  width: 700px;
+  border: 8px solid #95AB63;
+  padding: 50px;
+  margin: 0 auto;
+  margin-top: 200px;
+}
+
+fieldset #name {
+  margin-bottom: 20px;
+}
+
+footer {
+  font-size: 40px;
+  font-family: 'Space Grotesk', sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.quotation {
+  font-size: 100px;
 }
