--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ nav {
 
 nav ul {
     display: flex;
-    align-items:center;
+    align-items:right;
   }
 
 nav ul li a {
@@ -28,11 +28,11 @@ nav ul li a {
   text-decoration: none;
   font-family: 'Kaisei Opti', serif;
   font-size: 18px;
-  color: #10222B;
+  color:#E1F0D5;
 }
 
 body {
-  background-color: #E1F0D5;
+  background-color: #E1F0D5; 
 }
 
 h1{
@@ -79,8 +79,8 @@ h4{
 button {
   background-color: #95AB63;
   margin-top: 50px;
-  height: 80px;
-  width: 200px;
+  height: 50px;
+  width: 150px;
   border: none;
   border-radius: 10px;
   padding: .3rem 1rem;
@@ -90,6 +90,11 @@ button {
   font-family: 'Kaisei Opti', serif;
 }
 
+button:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
 fieldset {
   text-align: center;
   margin-top: 250px;
@@ -97,6 +102,8 @@ fieldset {
   font-style: bold;
   width: 700px;
   border: 8px solid #95AB63;
+  border-radius: 10px;
+  box-shadow: 3px 2px 5px #10222B;
   padding: 50px;
   margin: 0 auto;
   margin-top: 200px;
@@ -116,5 +123,37 @@ footer {
 }
 
 .quotation {
-  font-size: 100px;
+  font-size: 25px;
+  float: right;
+}
+
+img {
+  border-radius: 50%;
+  box-shadow: 0 0 50px #95AB63;
+  width: 200px;
+  height: 200px;
+  margin-top: 100px;
+}
+
+#breathe {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#chillbutton {
+  margin-top: 50px;
+}
+
+main {
+  padding-top: 50px;
+}
+
+article {
+  margin: 5px;
+}
+
+header {
+  background-color: #10222B;opacity: 0.6;
+  height: 25px;
 }
