--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,8 @@
 
 nav {
   margin: 0 auto;
-  width: 960px;
   display: flex;
   justify-content: center;
-  justify-content: flex-start;
   padding-top: 3px;
   
 }
@@ -44,9 +42,7 @@ h1{
   text-align: center;
   padding-bottom: 10px;
   padding-top: 10px;
-  
-  margin-left: 300px;
-  margin-right: 300px;
+  margin: 0 20rem;
   border-bottom: solid 10px;
   border-color: #95AB63;
 }
@@ -97,9 +93,16 @@ button:hover {
   cursor: pointer;
 }
 
+h2{
+  font-family: 'Kaisei Opti', serif;
+  font-style: bolder;
+  text-align: center;
+  font-size: 2rem;
+  margin:1rem;
+}
+
 fieldset {
   text-align: center;
-  margin-top: 250px;
   font-family: 'Kaisei Opti', serif;
   font-style: bold;
   width: 700px;
@@ -108,7 +111,7 @@ fieldset {
   box-shadow: 3px 2px 5px #10222B;
   padding: 50px;
   margin: 0 auto;
-  margin-top: 200px;
+  margin-top: 2rem;
 }
 
 fieldset #name {
@@ -121,20 +124,23 @@ footer {
   text-align: center;
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 25rem;
+  float:right;
+  /* margin: 0 5rem 5rem 0; */
 }
 
 .quotation {
-  font-size: 25px;
-  float: right;
-}
+  font-size: 100px;
+  line-height:80%;
+  }
+
 
 img {
   border-radius: 50%;
   box-shadow: 0 0 50px #95AB63;
   width: 200px;
   height: 200px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 #breathe {
@@ -152,7 +158,11 @@ main {
 }
 
 article {
-  margin: 5px;
+  font-family: 'Kaisei Opti', serif;
+  font-style: bolder;
+  text-align: center;
+  font-size: 2rem;
+  line-height:150%;
 }
 
 header {
