--- a/css/about-me-stylesheet.css
+++ b/css/about-me-stylesheet.css
@@ -96,11 +96,15 @@
     width: 200px;
     height: 200px;
     margin-top: 50px;
-    float: left;
+    /* float: left;
+    clear: left; */
     
   }
   main {
     padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    
   }
   
   article {
@@ -116,8 +120,18 @@
     height: 25px;
   }
 
-  .headshot{
-    float: left;
-    clear: left;
-  }
   
+  div {
+      
+      /* width: 50%; */
+      
+  }
+  div #name{
+    /* float: right; */
+
+  }
+  div #headshot{
+    margin: 25px;
+    /* flex-direction: row;
+    justify-content: center; */
+  }
