--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -39,7 +39,7 @@ h4{
   font-family: 'Merienda', cursive;
   color: #10222B;
   text-align: center;
-  margin-top: auto;
+  margin-top: 6px;
   margin-bottom: auto;
 }
 
