--- a/css/about-me-stylesheet.css
+++ b/css/about-me-stylesheet.css
@@ -42,29 +42,12 @@
     text-align: center;
     padding-bottom: 10px;
     padding-top: 10px;
-    margin: 0 20rem;
+    margin: 1rem 20rem;
     border-bottom: solid 10px;
     border-color: #95AB63;
   }
   
   
-   h3{
-    font-size: 25px;
-    font-style:italic;
-    color: #F5FFE0;
-    text-align: center;
-    margin-top: auto;
-  }
-  
-  h4{
-    font-size: 20px;
-    font-family: 'Merienda', cursive;
-    color: #10222B;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
- 
   h2{
     font-family: 'Kaisei Opti', serif;
     font-style: bolder;
@@ -93,45 +76,34 @@
   img {
     border-radius: 50%;
     box-shadow: 0 0 50px #95AB63;
-    width: 200px;
-    height: 200px;
-    margin-top: 50px;
-    /* float: left;
-    clear: left; */
-    
-  }
-  main {
-    padding-top: 50px;
-    display: flex;
-    flex-direction: column;
-    
-  }
+    width: 10rem;
+    height: 10rem;
+    margin: 50px 25px;
+   }
+ 
   
-  article {
-    font-family: 'Kaisei Opti', serif;
-    font-style: bolder;
-    text-align: center;
-    font-size: 2rem;
-    line-height:150%;
-  }
   
   header {
     background-color: #10222B;opacity: 0.6;
     height: 25px;
   }
 
-  
-  div {
-      
-      /* width: 50%; */
-      
+  div #left{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
   }
-  div #name{
-    /* float: right; */
 
+  div #right{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
   }
+ 
   div #headshot{
     margin: 25px;
-    /* flex-direction: row;
-    justify-content: center; */
+    display: flex;
+    flex-direction:row;
+    width: 50%;
+    align-items: center;
   }
