--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav ul {
 nav ul li a {
   padding: 1rem;
   text-decoration: none;
-  font-family: 'Kaisei Opti', serif;
+  font-family: 'Questrial', sans-serif;
   font-size: 18px;
   color:#E1F0D5;
 }
@@ -37,7 +37,7 @@ body {
 
 h1{
   font-size: 50px;
-  font-family: 'Kaisei Opti', serif;
+  font-family: 'Playfair Display', serif;
   color: #10222B;
   text-align: center;
   padding-bottom: 10px;
@@ -50,7 +50,7 @@ h1{
 
  h3{
   font-size: 25px;
-  font-style:italic;
+  font-family: 'Playfair Display', serif;
   color: #F5FFE0;
   text-align: center;
   margin-top: auto;
@@ -58,7 +58,7 @@ h1{
 
 h4{
   font-size: 20px;
-  font-family: 'Merienda', cursive;
+  font-family: 'Playfair Display', serif;
   color: #10222B;
   text-align: center;
   margin-top: auto;
@@ -66,15 +66,15 @@ h4{
 }
 
 
-.button2 {
+.button2div {
   margin-top: 25px;
-  font-family: 'Kaisei Opti', serif;
+  font-family: 'Questrial', sans-serif;
   text-align: center;
   margin: 0 auto;
   
 }
 
-button {
+.button {
   background-color: #95AB63;
   margin-top: 50px;
   height: 50px;
@@ -85,25 +85,75 @@ button {
   text-decoration: none;
   color: #F5FFE0;
   margin-top: 25px;
-  font-family: 'Kaisei Opti', serif;
-}
-
-button:hover {
-  opacity: 50%;
+  font-family: 'Questrial', sans-serif;
+  transition: all 0.5s;
   cursor: pointer;
 }
 
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+.buttonChill {
+  background-color: #95AB63;
+  margin-top: 50px;
+  height: 50px;
+  width: 150px;
+  border: none;
+  border-radius: 10px;
+  padding: .3rem 1rem;
+  text-decoration: none;
+  color: #F5FFE0;
+  margin-top: 25px;
+  font-family: 'Questrial', sans-serif;
+  transition: all 0.5s;
+  cursor: pointer;
+  box-shadow: 0 9px #999;
+  outline: none;
+}
+
+.buttonChill:hover {
+  background-color: #95AB63;
+  
+}
+
+.buttonChill:active {
+  background-color: #95AB63;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 h2{
-  font-family: 'Kaisei Opti', serif;
-  font-style: bolder;
+  font-family: 'Playfair Display', serif;
   text-align: center;
   font-size: 2rem;
   margin:1rem;
+  color: #10222B;
 }
 
 fieldset {
   text-align: center;
-  font-family: 'Kaisei Opti', serif;
+  font-family: 'Questrial', sans-serif;
   font-style: bold;
   width: 700px;
   border: 8px solid #95AB63;
@@ -119,13 +169,14 @@ fieldset #name {
 }
 
 footer {
-  font-size: 40px;
-  font-family: 'Space Grotesk', sans-serif;
+  font-size: 25px;
+  font-family: 'Questrial', sans-serif;
   text-align: center;
   display: flex;
   flex-direction: column;
   width: 25rem;
   float:right;
+  color: #10222B;
 }
 
 .quotation {
@@ -148,16 +199,12 @@ img {
   flex-direction: column;
 }
 
-#chillbutton {
-  margin-top: 50px;
-}
-
 main {
   padding-top: 50px;
 }
 
 article {
-  font-family: 'Kaisei Opti', serif;
+  font-family: 'Questrial', sans-serif;
   font-style: bolder;
   text-align: center;
   font-size: 2rem;
