--- a/css/about-me-stylesheet.css
+++ b/css/about-me-stylesheet.css
@@ -60,16 +60,6 @@
     height: 25px;
   }
 
-  footer {
-    font-size: 40px;
-    font-family: 'Questrial', sans-serif;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    width: 25rem;
-    float:right;
-  }
-  
   .quotation {
     font-size: 100px;
     line-height:80%;
@@ -109,4 +99,8 @@
     width: 50%;
     align-items: center;
     justify-content:space-evenly;
+  }
+
+  div #name {
+    font-family: 'Questrial', sans-serif;
   }
