--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -40,6 +40,10 @@ h4{
   margin-bottom: auto;
 }
 
+#background-image{
+  background-image: url("./img/meditation-sitdown.jpg");
+}
+
 .card{
   flex: auto;
   opacity: 0.9;
