Another dot to the image reference on the index page

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -41,7 +41,7 @@ h4{
 }
 
 #background-image{
-  background-image: url("./img/meditation-sitdown.jpg");
+  background-image: url("../img/meditation-sitdown.jpg");
 }
 
 .card{
